ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST =			\
	autogen.sh 		\
	ax_pkg_swig.m4

SUBDIRS =			\
	src			\
	test			\
	tools			\
	doc			\
	examples/H5		\
	examples/H5Part	 	\
	examples/H5Block	\
	examples/H5Fed

MAINTAINERCLEANFILES = 		\
	config.h 		\
	config.log 		\
	config.status 		\
	stamp-h.in 		\
	stamp-h1
